--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
       "php": "^8.0",
       "illuminate/support": "^8.67|^9.0",
-      "blazervel/ui": "dev-master",
+      "blazervel/ui": "^0.0.1",
       "phpstan/phpstan": "^1.7"
   },
   "require-dev": {
